<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/streetfighter_background"
    android:orientation="vertical"
    tools:context=".CharacterActivity">

    <Spinner
        android:id="@+id/move_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="40sp"
        android:popupBackground="@color/black" />

    <LinearLayout
        android:id="@+id/row_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/move_spinner"
        android:layout_centerInParent="true"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/start_up_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="50dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@id/start_up_text_view"
                android:text="@string/start_up_label"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/start_up_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoSizeMinTextSize="8sp"
                android:autoSizeStepGranularity="2sp"
                android:textAlignment="center"
                android:textSize="25sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/active_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@+id/active_text_view"
                android:text="@string/active_label"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/active_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoSizeMinTextSize="8sp"
                android:autoSizeStepGranularity="2sp"
                android:autoSizeTextType="uniform"
                android:textAlignment="center"
                android:textSize="25sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/recovery_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@id/recovery_text_view"
                android:text="@string/recovery_Label"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/recovery_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoSizeMinTextSize="8sp"
                android:autoSizeStepGranularity="2sp"
                android:autoSizeTextType="uniform"
                android:textAlignment="center"
                android:textSize="25sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/row_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/row_1"
        android:layout_centerInParent="true"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/on_hit_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@id/on_hit_text_view"
                android:text="@string/hit_label"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/on_hit_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoSizeMinTextSize="8sp"
                android:autoSizeStepGranularity="2sp"
                android:autoSizeTextType="uniform"
                android:textAlignment="center"
                android:textSize="25sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/on_block_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginBottom="20sp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@id/on_block_text_view"
                android:text="@string/block_label"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/on_block_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoSizeMinTextSize="8sp"
                android:autoSizeStepGranularity="2sp"
                android:autoSizeTextType="uniform"
                android:textAlignment="center"
                android:textSize="25sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/row_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/row_2"
        android:layout_centerInParent="true"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/damage_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="70dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@id/damage_text_view"
                android:text="@string/damage_label"
                android:textAlignment="center"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/damage_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoSizeMinTextSize="8sp"
                android:autoSizeStepGranularity="2sp"
                android:autoSizeTextType="uniform"
                android:textAlignment="center"
                android:textSize="25sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/stun_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@+id/stun_text_view"
                android:text="@string/stun_label"
                android:textAlignment="center"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/stun_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoSizeMinTextSize="8sp"
                android:autoSizeStepGranularity="2sp"
                android:autoSizeTextType="uniform"
                android:textAlignment="center"
                android:textSize="25sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/type_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/row_3"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@+id/type_text_view"
            android:text="@string/type_label"
            android:textAlignment="center"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/type_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="25sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/error_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/data_retrieval_error"
        android:textColor="@color/white"
        android:visibility="invisible" />

</RelativeLayout>